<resources>
    <string name="app_name">AyuShare2.0</string>
    <string name="welcome_message">Touch to continue!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="add_new_patient"><u><b>Add new patient</b></u></string>
    <string name="ayushare_snake">AyuShare</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="select_your_device"><u><b>Select your device</b></u></string>
    <string name="ayusync">AyuSync</string>
    <string name="ayulynk">AyuLynk</string>
    <string name="bluetooth_msg">AyuSync requires bluetooth to be kept on</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_age">Patient Age</string>
    <string name="gender">Gender :</string>
    <string name="create_patient">Create Patient</string>
    <string name="comment">Comment</string>
    <string name="rec_screen"><b><u>Recording Screen</u></b></string>
</resources>
