<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/ayuBlueBack"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/select_your_device"
        android:layout_gravity="center"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/ayulynk"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/bigbtncolor"
        android:layout_margin="5dp"
        android:text="@string/ayulynk"/>
    <Button
        android:id="@+id/ayusync"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:background="@color/bigbtncolor"
        android:text="@string/ayusync"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="40dp"
        android:text="@string/bluetooth_msg"/>

</LinearLayout>