<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ayuBlueBack" >


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/ayushare_snake"
        android:gravity="center"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_email"
        android:layout_gravity="center"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_id"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/enter_password"
        android:layout_gravity="center"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:background="@color/btncolor"
        android:textColor="@color/ayuWidgetBorder"
        android:text="@string/login"
        />


</LinearLayout>